# hap

./: .env  .gitignore  README.md  __init__.py  llm_client.py  planandsolve.py  pyproject.toml  pyrightconfig.json  react.py  reflection.py  tools.py
agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
codes/: __init__.py
codes/core/: __init__.py  llm.py
core/: __init__.py  agent.py  database_config.py  llm.py  message.py
memory/: __init__.py  manager.py
memory/rag/: pipeline.py
memory/storage/: neo4j_store.py  qdrant_store.py
memory/types/: episodic.py  perceptual.py  semantic.py  working.py
memory_data/: memory.db
src/hap/: __init__.py
src/hap/agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
src/hap/core/: __init__.py  agent.py  database_config.py  exceptions.py  llm.py
src/hap/memory/: base.py
src/hap/memory/rag/: pipeline.py
src/hap/memory/storage/: __init__.py  (+1 more)
src/hap/tools/: __init__.py  async_executor.py  base.py  registry.py
src/hap/utils/: logging.py
tests/agents/: test_plan_solve_agent.py  test_react_agent.py  test_reflection_agent.py
tests/core/: test_llm.py
tests/tools/: __init__.py  test_registry.py
tests/tools/builtin/: test_bash.py  test_memory_tool.py  test_python_repl.py  test_web_search.py
tests/tools/test_builtin/: __init__.py  test_rag_tool.py
tools/: __init__.py  async_executor.py  base.py  registry.py
tools/builtin/: __init__.py  calculator.py  memory_tool.py  rag_tool.py  search.py
utils/: logging.py
(+8 files in other folders)
