[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hap"
version = "0.1.0"
description = "Hello Agents Platform - A flexible LLM agent framework"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
